--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,14 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<div class="container">
+  <div class="sidebar">
+    Sidebar.
+  </div>
+  <main>
+    <div class="main-header">
+      My Dashboard
+    </div>
+    <div class="body-wrapper">
+      foo
+      {{outlet}}
+    </div>
+  </main>
+</div>
